Remove custodian identifier and type from count endpoint
