# api/consumer/countDocumentReference/src/v1/handler.py
@@ -8,15 +8,9 @@ from lambda_pipeline.types import FrozenDict, LambdaContext, PipelineData
 from nrlf.consumer.fhir.r4.model import NextPageToken, RequestQuerySubject
 from nrlf.core.common_steps import make_common_log_action, parse_headers
 from nrlf.core.errors import assert_no_extra_params
-from nrlf.core.model import ConsumerRequestParams, PaginatedResponse, key
-from nrlf.core.repository import (
-    COUNT_ITEM_LIMIT,
-    Repository,
-    custodian_filter,
-    type_filter,
-)
+from nrlf.core.model import CountRequestParams, PaginatedResponse, key
+from nrlf.core.repository import COUNT_ITEM_LIMIT, Repository, type_filter
 from nrlf.core.transform import create_bundle_count
-from nrlf.core.validators import validate_type_system
 
 log_action = make_common_log_action()
 
@@ -35,7 +29,7 @@ def search_document_references(
 ) -> PipelineData:
     repository: Repository = dependencies["repository"]
 
-    request_params = ConsumerRequestParams(**event.queryStringParameters or {})
+    request_params = CountRequestParams(**event.queryStringParameters or {})
 
     assert_no_extra_params(
         request_params=request_params, provided_params=event.queryStringParameters
@@ -43,21 +37,10 @@ def search_document_references(
 
     nhs_number: RequestQuerySubject = request_params.nhs_number
 
-    custodian = custodian_filter(
-        custodian_identifier=request_params.custodian_identifier
-    )
-
-    validate_type_system(request_params.type, pointer_types=data["pointer_types"])
-
     pointer_types = type_filter(
-        type_identifier=request_params.type,
+        type_identifier=None,
         pointer_types=data["pointer_types"],
     )
-
-    next_page_token: NextPageToken = request_params.next_page_token
-
-    if next_page_token is not None:
-        next_page_token = next_page_token.__root__
 
     pk = key("P", nhs_number)
 
