# layer/nrlf/nrlf/consumer/fhir/r4/model.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2023-06-20T15:30:43+00:00
+#   timestamp: 2023-06-21T14:09:52+00:00
 
 from __future__ import annotations
 
@@ -479,6 +479,12 @@ class RequestParams(BaseModel):
     next_page_token: Annotated[
         Optional[NextPageToken], Field(alias="next-page-token")
     ] = None
+
+
+class CountRequestParams(BaseModel):
+    subject_identifier: Annotated[
+        RequestQuerySubject, Field(alias="subject:identifier")
+    ]
 
 
 class OperationOutcomeIssue(BaseModel):
